# esp32-temp-sensor

./: Cargo.toml
src/: aht10.rs  main.rs
